--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <!-- stylesheet -->
+ <link rel="stylesheet" href="./style.css">
+
+ <!-- JS -->
+ <script defer src="script.js"></script>
+ 
+ <title>throw hands</title>
 </head>
 <body>
  
