--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </head>
 <body>
  <div class="titles">
-
+  <div class="player"></div>
+  <div class="cpu"></div>
  </div>
 
  <button>throw hands</button>
