--- a/index.html
+++ b/index.html
@@ -15,8 +15,21 @@
 </head>
 <body>
  <div class="titles">
-  <div class="player"></div>
-  <div class="cpu"></div>
+  <div class="player">
+   <div class="title-one">
+    <h1>player</h1>
+    <span class="line"></span>
+   </div>
+   <p id="player"></p>
+  </div>
+
+  <div class="cpu">
+   <div class="title-two">
+    <h1>cpu</h1>
+    <span class="line"></span>
+   </div>
+   <p id="cpu"></p>
+  </div>
  </div>
 
  <button>throw hands</button>
